Test pre-commit hooks

--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -112,7 +112,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn\n",
-    "import numpy as np \n"
+    "import numpy as np"
    ]
   },
   {
@@ -123,8 +123,13 @@
    "source": [
     "# constants and global functions\n",
     "def drop_low_varriance(data_frame, var_threshold):\n",
-    "    columns_to_drop = [col for col in data_frame.columns if data_frame.var()[col] < var_threshold]\n",
-    "    print('These columns will be discarded as their varriance is below the set threshold', columns_to_drop)\n",
+    "    columns_to_drop = [\n",
+    "        col for col in data_frame.columns if data_frame.var()[col] < var_threshold\n",
+    "    ]\n",
+    "    print(\n",
+    "        \"These columns will be discarded as their varriance is below the set threshold\",\n",
+    "        columns_to_drop,\n",
+    "    )\n",
     "    data_frame.drop(columns=columns_to_drop, inplace=True)\n",
     "    return data_frame"
    ]
@@ -163,7 +168,7 @@
    "outputs": [],
    "source": [
     "# read and plot expec.t\n",
-    "expect_dat = pd.read_csv('../data/expec.t', sep='\\s+') #noqa\n",
+    "expect_dat = pd.read_csv(\"../data/expec.t\", sep=\"\\s+\")  # noqa\n",
     "expect_dat"
    ]
   },
@@ -182,7 +187,9 @@
    "source": [
     "# eliminate columns based on the variance: if the variance of the values\n",
     "# in a column is below a given threshold, that column is discarded\n",
-    "expect_dat = drop_low_varriance(expect_dat, 1e-5)  # var threshold taken from inspecting data"
+    "expect_dat = drop_low_varriance(\n",
+    "    expect_dat, 1e-5\n",
+    ")  # var threshold taken from inspecting data"
    ]
   },
   {
@@ -201,7 +208,7 @@
     "# create plots\n",
     "plt.figure(figsize=[40, 40])\n",
     "seaborn.pairplot(expect_dat)  # Use pairplot since we're looking for correlations\n",
-    "plt.savefig('../results/expect_data_pairplot.pdf', format='pdf')"
+    "plt.savefig(\"../results/expect_data_pairplot.pdf\", format=\"pdf\")"
    ]
   },
   {
@@ -218,7 +225,7 @@
    "outputs": [],
    "source": [
     "# read in npop.t\n",
-    "npop_dat = pd.read_csv('../data/npop.t', sep='\\s+') #noqa"
+    "npop_dat = pd.read_csv(\"../data/npop.t\", sep=\"\\s+\")  # noqa"
    ]
   },
   {
@@ -279,7 +286,7 @@
    "outputs": [],
    "source": [
     "# print the correlation matrix\n",
-    "print(npop_dat.corr(method='pearson'))"
+    "print(npop_dat.corr(method=\"pearson\"))"
    ]
   },
   {
@@ -292,21 +299,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get rid of time column, lower triangular and diagonal entries of the correlation matrix\n",
     "# sort the remaing values according to their absolute value, but keep the sign\n",
-    "corr_matrix = npop_dat.drop(columns=['time']).corr(method='pearson')\n",
+    "corr_matrix = npop_dat.drop(columns=[\"time\"]).corr(method=\"pearson\")\n",
     "corr_matrix = corr_matrix.stack().drop_duplicates().reset_index()\n",
     "# drop_duplicates doesn't catch the first case where var1 == var2 so remove it\n",
-    "corr_matrix = corr_matrix[corr_matrix['level_0'] != corr_matrix['level_1']]\n",
-    "corr_matrix.columns = ['var1', 'var2', 'corr']\n",
+    "corr_matrix = corr_matrix[corr_matrix[\"level_0\"] != corr_matrix[\"level_1\"]]\n",
+    "corr_matrix.columns = [\"var1\", \"var2\", \"corr\"]\n",
     "\n",
     "# Sort by strength of correlation so use the absolute value, reset indext for readability of display\n",
-    "corr_matrix = corr_matrix.sort_values(by='corr', ascending=False, key=abs).reset_index(drop=True)\n",
+    "corr_matrix = corr_matrix.sort_values(by=\"corr\", ascending=False, key=abs).reset_index(\n",
+    "    drop=True\n",
+    ")\n",
     "corr_matrix"
    ]
   },
@@ -331,7 +338,7 @@
    "outputs": [],
    "source": [
     "# write to file\n",
-    "corr_matrix.to_csv('../results/npop_correlations.dat', sep='\\t', index=False)"
+    "corr_matrix.to_csv(\"../results/npop_correlations.dat\", sep=\"\\t\", index=False)"
    ]
   },
   {
@@ -358,10 +365,10 @@
    "source": [
     "# read in table.dat - I suggest reading it as a numpy array\n",
     "# replace the NaNs by zero\n",
-    "table_dat = np.genfromtxt('../data/table.dat', names=True)\n",
+    "table_dat = np.genfromtxt(\"../data/table.dat\", names=True)\n",
     "table_dat = np.nan_to_num(table_dat)\n",
     "\n",
-    "print(table_dat.dtype.names) "
+    "print(table_dat.dtype.names)"
    ]
   },
   {
@@ -379,22 +386,23 @@
    "source": [
     "# calculate the Euclidean distance\n",
     "def Euclidean_distance(v1, v2):\n",
-    "    distance = np.sum((v1-v2)**2)\n",
+    "    distance = np.sum((v1 - v2) ** 2)\n",
     "    return distance\n",
     "\n",
+    "\n",
     "# Split of table_dat accoding to names and calculate corresponding distances\n",
-    "rx = table_dat['rx']\n",
-    "vx = table_dat['vx']\n",
-    "x_distance = Euclidean_distance(rx, vx) \n",
+    "rx = table_dat[\"rx\"]\n",
+    "vx = table_dat[\"vx\"]\n",
+    "x_distance = Euclidean_distance(rx, vx)\n",
     "\n",
-    "ry = table_dat['ry']\n",
-    "vy = table_dat['vy']\n",
-    "y_distance = Euclidean_distance(ry, vy) \n",
+    "ry = table_dat[\"ry\"]\n",
+    "vy = table_dat[\"vy\"]\n",
+    "y_distance = Euclidean_distance(ry, vy)\n",
     "\n",
     "\n",
-    "rz = table_dat['rz']\n",
-    "vz = table_dat['vz']\n",
-    "z_distance = Euclidean_distance(rz, vz) \n"
+    "rz = table_dat[\"rz\"]\n",
+    "vz = table_dat[\"vz\"]\n",
+    "z_distance = Euclidean_distance(rz, vz)"
    ]
   },
   {
