--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -357,9 +357,7 @@
     "# read in table.dat - I suggest reading it as a numpy array\n",
     "# replace the NaNs by zero\n",
     "table_dat = np.genfromtxt('../data/table.dat', skip_header=1, dtype=np.float64)\n",
-    "table_dat = np.nan_to_num(table_dat)\n",
-    "\n",
-    "print(table_dat.dtype.names) "
+    "table_dat = np.nan_to_num(table_dat)"
    ]
   },
   {
@@ -400,8 +398,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the result and save to a .pdf"
+    "# plot the result and save to a .pdf\n",
+    "plt.figure()\n",
+    "plt.bar(np.arange(0,3),np.array([x_distance, y_distance, z_distance]), tick_label=['x','y','z'] )\n",
+    "plt.title('Distances Between u and v')\n",
+    "plt.savefig('../results/table_dat_distances.pdf', format='pdf')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
