--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -415,10 +415,8 @@
    "source": [
     "# read in table.dat - I suggest reading it as a numpy array\n",
     "# replace the NaNs by zero\n",
-    "table_dat = np.genfromtxt('../data/table.dat', names=True)\n",
-    "table_dat = np.nan_to_num(table_dat)\n",
-    "\n",
-    "print(table_dat.dtype.names) "
+    "table_dat = np.genfromtxt('../data/table.dat', skip_header=1, dtype=np.float64)\n",
+    "table_dat = np.nan_to_num(table_dat)"
    ]
   },
   {
@@ -436,21 +434,20 @@
    "source": [
     "# calculate the Euclidean distance\n",
     "def Euclidean_distance(v1, v2):\n",
-    "    distance = np.sum((v1-v2)**2)\n",
+    "    distance = np.sqrt(np.sum((v1-v2)**2))\n",
     "    return distance\n",
     "\n",
     "# Split of table_dat accoding to names and calculate corresponding distances\n",
-    "rx = table_dat['rx']\n",
-    "vx = table_dat['vx']\n",
+    "rx = table_dat[2]\n",
+    "vx = table_dat[3]\n",
     "x_distance = Euclidean_distance(rx, vx) \n",
     "\n",
-    "ry = table_dat['ry']\n",
-    "vy = table_dat['vy']\n",
+    "ry = table_dat[4]\n",
+    "vy = table_dat[5]\n",
     "y_distance = Euclidean_distance(ry, vy) \n",
     "\n",
-    "\n",
-    "rz = table_dat['rz']\n",
-    "vz = table_dat['vz']\n",
+    "rz = table_dat[6]\n",
+    "vz = table_dat[7]\n",
     "z_distance = Euclidean_distance(rz, vz) \n"
    ]
   },
@@ -460,8 +457,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the result and save to a .pdf"
+    "# plot the result and save to a .pdf\n",
+    "plt.figure()\n",
+    "plt.bar(np.arange(0,3),np.array([x_distance, y_distance, z_distance]), tick_label=['x','y','z'] )\n",
+    "plt.title('Distances Between u and v')\n",
+    "plt.savefig('../results/table_dat_distances.pdf', format='pdf')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -665,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
