--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -7,7 +7,7 @@
     "**Sustainable Software Development, block course, March 2021**  \n",
     "*Scientific Software Center, Institute for Scientific Computing, Dr. Inga Ulusoy*\n",
     "\n",
-    "# Analysis of the dataaa\n",
+    "# Analysis of the data\n",
     "\n",
     "Imagine you perform a \"measurement\" of some type and obtain \"scientific data\". You know what your data represents, but you have only a vague idea how different features in the data are connected, and what information you can extract from the data.\n",
     "\n",
