--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -415,7 +415,7 @@
    "source": [
     "# read in table.dat - I suggest reading it as a numpy array\n",
     "# replace the NaNs by zero\n",
-    "table_dat = np.genfromtxt('../data/table.dat', names=True)\n",
+    "table_dat = np.genfromtxt('../data/table.dat', names=False, skip_header=1)\n",
     "table_dat = np.nan_to_num(table_dat)\n",
     "\n",
     "print(table_dat.dtype.names) "
@@ -436,21 +436,20 @@
    "source": [
     "# calculate the Euclidean distance\n",
     "def Euclidean_distance(v1, v2):\n",
-    "    distance = np.sum((v1-v2)**2)\n",
+    "    distance = np.sqrt(np.sum((v1-v2)**2))\n",
     "    return distance\n",
     "\n",
     "# Split of table_dat accoding to names and calculate corresponding distances\n",
-    "rx = table_dat['rx']\n",
-    "vx = table_dat['vx']\n",
+    "rx = table_dat[2]\n",
+    "vx = table_dat[3]\n",
     "x_distance = Euclidean_distance(rx, vx) \n",
     "\n",
-    "ry = table_dat['ry']\n",
-    "vy = table_dat['vy']\n",
+    "ry = table_dat[4]\n",
+    "vy = table_dat[5]\n",
     "y_distance = Euclidean_distance(ry, vy) \n",
     "\n",
-    "\n",
-    "rz = table_dat['rz']\n",
-    "vz = table_dat['vz']\n",
+    "rz = table_dat[6]\n",
+    "vz = table_dat[7]\n",
     "z_distance = Euclidean_distance(rz, vz) \n"
    ]
   },
@@ -665,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
