Fix pre commit (#4)
* Change to .pre-comit-config.yaml

* Test pre-commit hooks

* Test pre-commit hooks

--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -112,7 +112,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn\n",
-    "import numpy as np "
+    "import numpy as np"
    ]
   },
   {
@@ -123,14 +123,20 @@
    "source": [
     "# Constants and global functions\n",
     "\n",
+    "\n",
     "def drop_low_variance(data_frame, var_threshold):\n",
     "    \"\"\"Drop columns from the data frame with variance below a threshold.\"\"\"\n",
-    "    \n",
+    "\n",
     "    # Get the columns to drop\n",
-    "    columns_to_drop = [col for col in data_frame.columns if data_frame.var()[col] < var_threshold]\n",
+    "    columns_to_drop = [\n",
+    "        col for col in data_frame.columns if data_frame.var()[col] < var_threshold\n",
+    "    ]\n",
     "\n",
     "    # Print a message about the columns to drop\n",
-    "    print('These columns will be discarded as their variance is below the set threshold', columns_to_drop)\n",
+    "    print(\n",
+    "        \"These columns will be discarded as their variance is below the set threshold\",\n",
+    "        columns_to_drop,\n",
+    "    )\n",
     "\n",
     "    # Drop the columns from the data frame\n",
     "    data_frame.drop(columns=columns_to_drop, inplace=True)\n",
@@ -172,7 +178,7 @@
    "outputs": [],
    "source": [
     "# Read the expec.t file\n",
-    "expect_dat = pd.read_csv('../data/expec.t', sep='\\s+') #noqa"
+    "expect_dat = pd.read_csv(\"../data/expec.t\", sep=\"\\s+\")  # noqa"
    ]
   },
   {
@@ -200,7 +206,9 @@
    "source": [
     "# Eliminate columns based on the variance: if the variance of the values\n",
     "# in a column is below a given threshold, that column is discarded\n",
-    "expect_dat = drop_low_variance(expect_dat, 1e-5)  # var threshold taken from inspecting data"
+    "expect_dat = drop_low_variance(\n",
+    "    expect_dat, 1e-5\n",
+    ")  # var threshold taken from inspecting data"
    ]
   },
   {
@@ -223,7 +231,7 @@
     "seaborn.pairplot(expect_dat)  # Use pairplot since we're looking for correlations\n",
     "\n",
     "# Save the plot as a .pdf\n",
-    "plt.savefig('../results/expect_data_pairplot.pdf', format='pdf')"
+    "plt.savefig(\"../results/expect_data_pairplot.pdf\", format=\"pdf\")"
    ]
   },
   {
@@ -240,7 +248,7 @@
    "outputs": [],
    "source": [
     "# Read the npop.t file\n",
-    "npop_dat = pd.read_csv('../data/npop.t', sep='\\s+') #noqa"
+    "npop_dat = pd.read_csv(\"../data/npop.t\", sep=\"\\s+\")  # noqa"
    ]
   },
   {
@@ -311,7 +319,7 @@
    "outputs": [],
    "source": [
     "# Print the correlation matrix\n",
-    "npop_dat.corr(method='pearson')"
+    "npop_dat.corr(method=\"pearson\")  # person is default but add for clarity"
    ]
   },
   {
@@ -328,14 +336,14 @@
    "outputs": [],
    "source": [
     "# Calculate the correlation matrix without the time column\n",
-    "corr_matrix = npop_dat.drop(columns=['time']).corr(method='pearson')\n",
+    "corr_matrix = npop_dat.drop(columns=[\"time\"]).corr(method=\"pearson\")\n",
     "\n",
     "# Set the diagonal elements of the correlation matrix to None\n",
     "for i in range(corr_matrix.shape[0]):\n",
     "    corr_matrix.iloc[i, i] = None\n",
     "\n",
     "# Stack the correlation matrix, remove duplicates and reset the index\n",
-    "corr_matrix = corr_matrix.stack().reset_index()\n"
+    "corr_matrix = corr_matrix.stack().reset_index()"
    ]
   },
   {
@@ -348,7 +356,7 @@
     "# Sort the remaing values according to their absolute value, but keep the sign\n",
     "\n",
     "# Calculate the correlation matrix without the time column\n",
-    "corr_matrix = npop_dat.drop(columns=['time']).corr(method='pearson')\n",
+    "corr_matrix = npop_dat.drop(columns=[\"time\"]).corr(method=\"pearson\")\n",
     "\n",
     "# Set the diagonal elements of the correlation matrix to None\n",
     "for i in range(corr_matrix.shape[0]):\n",
@@ -358,10 +366,12 @@
     "corr_table = corr_matrix.stack().reset_index()\n",
     "\n",
     "# Set the column names for the table\n",
-    "corr_table.columns = ['var1', 'var2', 'corr']\n",
+    "corr_table.columns = [\"var1\", \"var2\", \"corr\"]\n",
     "\n",
     "# Sort the table by the absolute correlation values, reset the index for readability of display\n",
-    "corr_table = corr_table.sort_values(by='corr', ascending=False, key=abs).reset_index(drop=True)\n",
+    "corr_table = corr_table.sort_values(by=\"corr\", ascending=False, key=abs).reset_index(\n",
+    "    drop=True\n",
+    ")\n",
     "\n",
     "# Print the correlation table\n",
     "corr_table"
@@ -388,7 +398,7 @@
    "outputs": [],
    "source": [
     "# Print the correlation table to a file\n",
-    "corr_table.to_csv('../results/npop_correlations.dat', sep='\\t', index=False)"
+    "corr_table.to_csv(\"../results/npop_correlations.dat\", sep=\"\\t\", index=False)"
    ]
   },
   {
@@ -415,7 +425,7 @@
    "source": [
     "# read in table.dat - I suggest reading it as a numpy array\n",
     "# replace the NaNs by zero\n",
-    "table_dat = np.genfromtxt('../data/table.dat', skip_header=1, dtype=np.float64)\n",
+    "table_dat = np.genfromtxt(\"../data/table.dat\", skip_header=1, dtype=np.float64)\n",
     "table_dat = np.nan_to_num(table_dat)"
    ]
   },
@@ -434,22 +444,22 @@
    "source": [
     "# calculate the Euclidean distance\n",
     "def Euclidean_distance(v1, v2):\n",
-    "    distance = np.sqrt(np.sum((v1-v2)**2))\n",
+    "    distance = np.sqrt(np.sum((v1 - v2) ** 2))\n",
     "    return distance\n",
     "\n",
     "\n",
     "# Split of table_dat accoding to names and calculate corresponding distances\n",
     "rx = table_dat[2]\n",
     "vx = table_dat[3]\n",
-    "x_distance = Euclidean_distance(rx, vx) \n",
+    "x_distance = Euclidean_distance(rx, vx)\n",
     "\n",
     "ry = table_dat[4]\n",
     "vy = table_dat[5]\n",
-    "y_distance = Euclidean_distance(ry, vy) \n",
+    "y_distance = Euclidean_distance(ry, vy)\n",
     "\n",
     "rz = table_dat[6]\n",
     "vz = table_dat[7]\n",
-    "z_distance = Euclidean_distance(rz, vz) \n"
+    "z_distance = Euclidean_distance(rz, vz)"
    ]
   },
   {
@@ -460,9 +470,13 @@
    "source": [
     "# plot the result and save to a .pdf\n",
     "plt.figure()\n",
-    "plt.bar(np.arange(0,3),np.array([x_distance, y_distance, z_distance]), tick_label=['x','y','z'] )\n",
-    "plt.title('Distances Between u and v')\n",
-    "plt.savefig('../results/table_dat_distances.pdf', format='pdf')"
+    "plt.bar(\n",
+    "    np.arange(0, 3),\n",
+    "    np.array([x_distance, y_distance, z_distance]),\n",
+    "    tick_label=[\"x\", \"y\", \"z\"],\n",
+    ")\n",
+    "plt.title(\"Distances Between u and v\")\n",
+    "plt.savefig(\"../results/table_dat_distances.pdf\", format=\"pdf\")"
    ]
   },
   {
@@ -672,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
