Completed task 1 and 2

--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -509,7 +509,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read and plot efield.t"
+    "# Read the efield.t file\n",
+    "efield_dat = pd.read_csv('../data/efield.t', sep='\\s+') #noqa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the file content\n",
+    "efield_dat"
    ]
   },
   {
@@ -525,7 +536,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# discard the columns with variance below threshold - these are considered constant"
+    "# Discard the columns with variance below threshold - these are considered constant\n",
+    "efield_dat = drop_low_variance(efield_dat, 1e-5)"
    ]
   },
   {
@@ -534,7 +546,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# discrete Fourier transform of the remaining column: You only need the real frequencies"
+    "# Discrete Fourier transform of the remaining column: You only need the real frequencies\n",
+    "sp = np.fft.fft(efield_dat.loc[:, 'y'])\n",
+    "freq = np.fft.fftfreq(efield_dat.loc[:, 'y'].shape[-1])"
    ]
   },
   {
@@ -550,7 +564,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot your results"
+    "# Open a figure\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "# Create a line plot with the real frequencies\n",
+    "plt.plot(freq, sp.real)\n",
+    "\n",
+    "# Plot styling\n",
+    "plt.title('Fourier transform of efield data', fontsize=18)\n",
+    "plt.xlabel('Frequency', fontsize=12)\n",
+    "\n",
+    "# Save the plot to a .pdf\n",
+    "plt.savefig('../results/efield_fourier_transform.pdf', format='pdf')"
    ]
   },
   {
@@ -635,7 +660,7 @@
    "outputs": [],
    "source": [
     "# discrete Fourier-transform the autocorrelation function - now we need all frequency components,\n",
-    "# also the negative ones"
+    "# also the negative ones\n"
    ]
   },
   {
@@ -671,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
