Numerics, task 3 and 4

--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -564,7 +564,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in as numpy array"
+    "# read in as numpy array\n",
+    "nstate_dat = np.genfromtxt('../data/nstate_i.t', skip_header=1)\n",
+    "nstate_dat = np.nan_to_num(nstate_dat)"
    ]
   },
   {
@@ -573,7 +575,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# store the time column (column 0) in a vector and drop from array"
+    "# store the time column (column 0) in a vector and drop from array\n",
+    "time = nstate_dat[:, 0]\n",
+    "nstate_dat = nstate_dat[:, 1:]"
    ]
   },
   {
@@ -594,8 +598,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "result = np.empty((nstate_dat.shape[0], int(nstate_dat.shape[1]/2)), dtype=complex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.real = nstate_dat[:, ::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.imag = nstate_dat[:, 1::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# for the autocorrelation function, we want the overlap between the first vector at time 0 and all\n",
-    "# subsequent vectors at later times - the sum of the product of initial and subsequent vectors for each time step"
+    "# subsequent vectors at later times - the sum of the product of initial and subsequent vectors for each time step\n",
+    "sum = 0\n",
+    "for i in range(result[:, ].shape[0]):\n",
+    "    temp = np.dot(result[:, 0], result[:, i])\n",
+    "    sum+=temp"
    ]
   },
   {
@@ -611,7 +646,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the autocorrelation function - real, imaginary and absolute part"
+    "# plot the autocorrelation function - real, imaginary and absolute part\n",
+    "plt.bar([1, 2, 3], [sum.real, sum.imag, np.absolute(sum)])\n",
+    "plt.show()"
    ]
   },
   {
