Update to task 4 in numerics

--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -442,15 +442,15 @@
     "# Split of table_dat accoding to names and calculate corresponding distances\n",
     "rx = table_dat[2]\n",
     "vx = table_dat[3]\n",
-    "x_distance = Euclidean_distance(rx, vx) \n",
+    "x_distance = Euclidean_distance(rx, vx)\n",
     "\n",
     "ry = table_dat[4]\n",
     "vy = table_dat[5]\n",
-    "y_distance = Euclidean_distance(ry, vy) \n",
+    "y_distance = Euclidean_distance(ry, vy)\n",
     "\n",
     "rz = table_dat[6]\n",
     "vz = table_dat[7]\n",
-    "z_distance = Euclidean_distance(rz, vz) \n"
+    "z_distance = Euclidean_distance(rz, vz)"
    ]
   },
   {
@@ -465,11 +465,6 @@
     "plt.title('Distances Between u and v')\n",
     "plt.savefig('../results/table_dat_distances.pdf', format='pdf')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -682,7 +677,7 @@
    "source": [
     "# plot the autocorrelation function - real, imaginary and absolute part\n",
     "plt.bar([1, 2, 3], [sum.real, sum.imag, np.absolute(sum)])\n",
-    "plt.show()"
+    "plt.savefig('../results/autocorrelation_function.pdf', format='pdf')"
    ]
   },
   {
