--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -415,10 +415,9 @@
    "source": [
     "# read in table.dat - I suggest reading it as a numpy array\n",
     "# replace the NaNs by zero\n",
-    "table_dat = np.genfromtxt('../data/table.dat', names=False, skip_header=1)\n",
+    "table_dat = np.genfromtxt('../data/table.dat', skip_header=1)\n",
     "table_dat = np.nan_to_num(table_dat)\n",
-    "\n",
-    "print(table_dat.dtype.names) "
+    "\n"
    ]
   },
   {
@@ -735,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
