--- a/notebook/notebook_unit1.ipynb
+++ b/notebook/notebook_unit1.ipynb
@@ -7,7 +7,7 @@
     "**Sustainable Software Development, block course, March 2021**  \n",
     "*Scientific Software Center, Institute for Scientific Computing, Dr. Inga Ulusoy*\n",
     "\n",
-    "# Analysis of the dataaa\n",
+    "# Analysis of the data\n",
     "\n",
     "Imagine you perform a \"measurement\" of some type and obtain \"scientific data\". You know what your data represents, but you have only a vague idea how different features in the data are connected, and what information you can extract from the data.\n",
     "\n",
@@ -480,11 +480,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -524,7 +519,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read and plot efield.t"
+    "# Read the efield.t file\n",
+    "efield_dat = pd.read_csv(\"../data/efield.t\", sep=\"\\s+\")  # noqa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the file content\n",
+    "efield_dat"
    ]
   },
   {
@@ -540,7 +546,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# discard the columns with variance below threshold - these are considered constant"
+    "# Discard the columns with variance below threshold - these are considered constant\n",
+    "efield_dat = drop_low_variance(efield_dat, 1e-5)"
    ]
   },
   {
@@ -549,7 +556,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# discrete Fourier transform of the remaining column: You only need the real frequencies"
+    "# Discrete Fourier transform of the remaining column: You only need the real frequencies\n",
+    "sp = np.fft.fft(efield_dat.loc[:, \"y\"])\n",
+    "freq = np.fft.fftfreq(efield_dat.loc[:, \"y\"].shape[-1])"
    ]
   },
   {
@@ -565,7 +574,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot your results"
+    "# Open a figure\n",
+    "plt.figure(figsize=(20, 10))\n",
+    "\n",
+    "# Create a line plot with the real frequencies\n",
+    "plt.plot(freq, sp.real)\n",
+    "\n",
+    "# Plot styling\n",
+    "plt.title(\"Fourier transform of efield data\", fontsize=18)\n",
+    "plt.xlabel(\"Frequency\", fontsize=12)\n",
+    "\n",
+    "# Save the plot to a .pdf\n",
+    "plt.savefig(\"../results/efield_fourier_transform.pdf\", format=\"pdf\")"
    ]
   },
   {
@@ -586,7 +606,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read in as numpy array"
+    "# read in as numpy array\n",
+    "nstate_dat = np.genfromtxt(\"../data/nstate_i.t\", skip_header=1)\n",
+    "nstate_dat = np.nan_to_num(nstate_dat)"
    ]
   },
   {
@@ -595,7 +617,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# store the time column (column 0) in a vector and drop from array"
+    "# store the time column (column 0) in a vector and drop from array\n",
+    "time = nstate_dat[:, 0]\n",
+    "nstate_dat = nstate_dat[:, 1:]"
    ]
   },
   {
@@ -616,8 +640,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "result = np.empty((nstate_dat.shape[0], int(nstate_dat.shape[1] / 2)), dtype=complex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.real = nstate_dat[:, ::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.imag = nstate_dat[:, 1::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# for the autocorrelation function, we want the overlap between the first vector at time 0 and all\n",
-    "# subsequent vectors at later times - the sum of the product of initial and subsequent vectors for each time step"
+    "# subsequent vectors at later times - the sum of the product of initial and subsequent vectors for each time step\n",
+    "sum = 0\n",
+    "for i in range(result[:,].shape[0]):\n",
+    "    temp = np.dot(result[:, 0], result[:, i])\n",
+    "    sum += temp"
    ]
   },
   {
@@ -633,7 +688,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot the autocorrelation function - real, imaginary and absolute part"
+    "# plot the autocorrelation function - real, imaginary and absolute part\n",
+    "plt.bar([1, 2, 3], [sum.real, sum.imag, np.absolute(sum)])\n",
+    "plt.savefig(\"../results/autocorrelation_function.pdf\", format=\"pdf\")"
    ]
   },
   {
